# Hajime

./: .console_history  .gitignore  .gitmodules  .tokeignore  CONTRIBUTING.md  Makefile  README.md  README_es.md  SECURITY.md  cmake_install.cmake  devskim-analysis.yml  fakemake  getlatestpurpur.sh  hajime.cpp  install.bat  install.sh  languages.h  server_features.cpp  todo.md
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: blank.yml  c-cpp.yml  codacy-analysis.yml  codeql-analysis.yml  configure  devskim-analysis.yml  flawfinder-analysis.yml  macos  security-analysis.yml  test.yml
docs/: index.html  install.bat  main.css
hajime_helper/: build.gradle  settings.gradle
hajime_helper/src/main/java/hajimehelper/hajimehelper/: CommandHajime.java  Commands.java  HajimeHelper.java  Metrics.java
hajime_helper/src/main/resources/: plugin.yml
plugins/bStats/: config.yml
source/: CMakeLists.txt  commands.cpp  constants.cpp  constants.hpp  deduce.cpp  deduce.hpp  en.hpp  es.hpp  fakemake  flags.cpp  flexi_format.hpp  getvarsfromfile.cpp  getvarsfromfile.cxx  getvarsfromfile.h  getvarsfromfile.hpp  getyn.h  hajime  hajime.cpp  hajime_startup.cpp  hajime_startup.hpp  install.sh  installer.cpp  installer.cxx  installer.h  installer.hpp  languages.cpp  languages.cxx  languages.h  languages.hpp  main.cpp  output.cpp  output.cxx  output.h  output.hpp  pt.hpp  server.cpp  server.cxx  server.h  server.hpp  server_commands.cpp  (+7 more)
source/files/: default.h  default.json  hajime.h  hajime.json  hajime.plist  hajimeplist.h  sysvservice.h  sysvservice.sh
source/hajime_main/: constants.cpp  flags.cpp  flags.hpp  hajime_startup.cpp  hajime_startup.hpp  main.cpp
source/httplib/: httplib.cpp  httplib.h
source/languages/: en.hpp  es.hpp  pt.hpp
source/output/: languages.cpp  languages.hpp  output.hpp
source/performance_counters/: freebsd.cpp  linux.cpp  other.cpp  other_metrics.cpp  windows.cpp
source/server/: commands.cpp  server.cpp  server.hpp  server_features.cpp
source/setup/: deduce.cpp  installer.cpp  installer.hpp  wizard.cpp  wizard.hpp
